examples/test/testpolicy1566.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1566
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key4: value29
      key6: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value4
          key17: value41
          key8: value26
      podSelector:
        matchLabels:
          key11: value3
          key19: value14
